# prithvi_io_processor_plugin

./: .gitignore  pyproject.toml
geospatial_output_processor/: __init__.py  prithvi_processor.py  types.py
