[project]
name = "prithvi-multimodal-data-procesor"
description = "vLLM plugin for Multimodal Data Processing"
dynamic = ["version"]

[project.entry-points."vllm.io_processor_plugins"]
prithvi_to_tiff = "geospatial_output_processor:register_prithvi"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["geospatial_output_processor*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)